# android-sysmonitor

./: .gitignore  README.md  package.json  vite.config.js
.github/workflows/: build-android.yml
android-src/kotlin/: StatsWidget.kt
android-src/res/drawable/: widget_background.xml
android-src/res/layout/: widget_stats.xml
android-src/res/values/: strings.xml
android-src/res/xml/: widget_info.xml
scripts/: patch-android.py
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
